fixat till z-index på headern

--- a/projekt2/static/presto.css
+++ b/projekt2/static/presto.css
@@ -60,6 +60,7 @@ img.pic {
 	width:100%; 
 	height:100px;
 	position: fixed;
+	z-index: 10;
 }
 
 .navbar-brand {
